--- a/final_v1/final_v1.ioc
+++ b/final_v1/final_v1.ioc
@@ -16,45 +16,43 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PD12
+Mcu.Pin16=PD13
+Mcu.Pin17=PD14
+Mcu.Pin18=PD15
+Mcu.Pin19=PC7
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD14
-Mcu.Pin21=PD15
-Mcu.Pin22=PC7
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PC10
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PC10
+Mcu.Pin27=PC12
+Mcu.Pin28=PD0
+Mcu.Pin29=PD1
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PC12
-Mcu.Pin31=PD1
-Mcu.Pin32=PD2
-Mcu.Pin33=PD4
-Mcu.Pin34=PD5
-Mcu.Pin35=PB3
-Mcu.Pin36=PB6
-Mcu.Pin37=PB9
-Mcu.Pin38=PE1
-Mcu.Pin39=VP_SYS_VS_tim7
+Mcu.Pin30=PD2
+Mcu.Pin31=PD3
+Mcu.Pin32=PD5
+Mcu.Pin33=PD6
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_tim7
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=40
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -62,8 +60,10 @@ MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI0_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -76,10 +76,6 @@ NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Label=OTG_FS_ID
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -223,10 +219,14 @@ PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
 PC7.Signal=I2S3_MCK
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=livingroom_in
+PD0.Locked=true
+PD0.Signal=GPXTI0
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=bedroom_out
 PD1.Locked=true
-PD1.Signal=GPIO_Input
+PD1.Signal=GPXTI1
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=LD4 [Green Led]
 PD12.GPIO_PuPd=GPIO_NOPULL
@@ -255,32 +255,18 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=bedroom_in
 PD2.Locked=true
 PD2.Signal=GPXTI2
-PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
-PD4.GPIO_PuPd=GPIO_NOPULL
-PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PD4.Locked=true
-PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PD5.GPIO_Label=OTG_FS_OverCurrent
-PD5.GPIO_Mode=GPIO_MODE_INPUT
-PD5.GPIO_PuPd=GPIO_NOPULL
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=livingroom_out
+PD3.Locked=true
+PD3.Signal=GPXTI3
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=room_LED
 PD5.Locked=true
-PD5.Signal=GPIO_Input
-PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=livingroom_in
-PD8.Locked=true
-PD8.Signal=GPIO_Input
-PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=livingroom_out
-PD9.Locked=true
-PD9.Signal=GPIO_Input
-PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE1.GPIO_PuPd=GPIO_NOPULL
-PE1.Locked=true
-PE1.Signal=GPXTI1
+PD5.Signal=GPIO_Output
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=Livingroom_LED
+PD6.Locked=true
+PD6.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PE3.GPIO_PuPd=GPIO_NOPULL
@@ -364,6 +350,8 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim7.Mode=TIM7
